APP-2997 Adapt styles to React-select (#45)

--- a/src/utils/_utils.scss
+++ b/src/utils/_utils.scss
@@ -1,5 +1,14 @@
 /* Apply disabled style and behaviour to any element */
+
 .tk-disabled {
-  opacity: 0.4;
-  pointer-events: none;
+    opacity: 0.4;
+    pointer-events: none;
+}
+
+.tk-d-none {
+    display: none !important;
+}
+
+.tk-d-flex {
+    display: flex;
 }
