--- a/src/components/atoms/_select.scss
+++ b/src/components/atoms/_select.scss
@@ -1,50 +1,85 @@
-select.tk-select {
-  @extend .tk-input;
-  -webkit-appearance: none;
-  background: transparent;
-  background-repeat: no-repeat;
-  background-position-x: 96%;
-  background-position-y: 50%;
-
-  &+i::before {
-    position: relative;
-    right: 24px;
-    font-style: normal;
-    font-family: 'tk-icons';
-    font-size: 14px;
-    @include tk-icon-drop-down;
-  }
-
-  &--expanded+i::before {
-    @include tk-icon-drop-up;
-  }
-}
-
-.tk-select__container {
-  @extend .tk-input__container;
-}
-
-.tk-select-group {
-  @extend .tk-input-group;
-}
-
-.tk-select {
-  &__helper {
-    @extend .tk-label;
-    margin-top: toEm(4, $fontSize);
-  }
-}
-
 .tk-select--custom-dropdown {
-  @include listStyle;
-  @extend .tk-py-1;
-  max-height: 288px;
-  overflow-x: auto;
-  overflow-y: scroll;
-  z-index: $z-index-input;
+    @include listStyle;
+    @extend .tk-py-1;
+    max-height: 288px;
+    overflow-x: auto;
+    overflow-y: scroll;
+    z-index: $z-index-input;
+    &__item {
+        @extend .tk-py-1h;
+        @extend .tk-pr-2h;
+    }
+}
 
-  &__item {
-    @extend .tk-py-1h;
-    @extend .tk-pr-2h;
-  }
+//Override the css classes from react-select library to reuse the UIToolkit classes.
+.tk-select {
+    .tk-select {
+        &__single-value {
+            @extend .tk-text-color;
+        }
+        &__control {
+            @extend .tk-input;
+            padding: 0;
+            background: transparent;
+            background-repeat: no-repeat;
+            background-position-x: 96%;
+            background-position-y: 50%;
+            &.tk-select__control {
+                &--menu-is-open,
+                &--menu-is-focused {
+                    color: $--tk-input-default-active-color;
+                    box-shadow: inset 0 0 0 2px $--tk-input-default-focus-border-color;
+                    border-color: $--tk-input-default-focus-border-color;
+                }
+                &--is-disabled {
+                    color: $--tk-input-default-inactive-color;
+                    background-color: $--tk-input-disabled-background-color;
+                }
+            }
+            .tk-select__value-container {
+                .tk-select__multi-value {
+                    padding: 0;
+                    background-color: $--tk-list-tag-color;
+                    color: $--tk-main-text-color;
+                    &__label,
+                    &__remove {
+                        color: $--tk-main-text-color;
+                    }
+                    &__remove {
+                        font-size: 10px;
+                    }
+                    .tk-tag-remove {
+                        .tk-select__multi-value__remove:hover {
+                            background-color: inherit;
+                            color: inherit;
+                        }
+                    }
+                }
+            }
+        }
+        &__menu {
+            background-color: $--tk-list-background-color;
+            margin-top: 6px;
+        }
+        &__option {
+            &.tk-select__option {
+                &--is-focused {
+                    background-color: $--tk-list-hover-color;
+                    &:hover {
+                        background-color: $--tk-list-hover-color;
+                    }
+                }
+                &--is-selected {
+                    background-color: transparent;
+                    color: inherit;
+                    @extend .tk-select--custom-dropdown--selected;
+                }
+            }
+        }
+    }
+    &__indicators {
+        .tk-select__indicator-separator {
+            display: none;
+        }
+    }
 }
