--- a/src/variables/themes/_dark.scss
+++ b/src/variables/themes/_dark.scss
@@ -46,6 +46,7 @@
   --tk-list-hover-color: #{$scolor-graphite-plus-24};
   --tk-list-selected-color: #{$scolor-graphite-minus-88};
   --tk-list-divider-color: #{$scolor-graphite-minus-24};
+  --tk-list-tag-color: #{$scolor-graphite-minus-21};
 
   --tk-avatar-border-color: #{$scolor-graphite};
 
